tests/valid/definite/SetGenerator_Valid_1.whiley
void System::main([string] args):
     xs = {1,2,3,4}
     print str(xs)
